# faker-stupid

./: README.md  conftest.py  patch.py  patch_ascii_free_email.py  patch_ascii_free_email_with_partial.py  patch_class.py  patch_function.py  pyproject.toml  test.py
