[tool.poetry]
name = "pytest-check"
version = "0.1.0"
description = ""
authors = ["hoang <giahoangth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^8.13.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
